--- a/index.html
+++ b/index.html
@@ -1,11 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ECOTravel</title>
+    <title>EcoTravel</title>
+
+    <script src="script.js"></script>
+    <link rel="stylesheet" href="style.css">
+
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
+
+    <!--Google fonts link-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap"
+        rel="stylesheet">
+
 </head>
 <body>
-    <center><b>WECLOME TO ECOTravel</b></center>
+    <section id="banner">
+        <div class="banner-text">
+        <a href="#" class="name">ECO<span>Travel</span></a>
+        <p>Let's make our planet healthier for the next generation.</p>
+    </div>
+    </section>
+
+    <header class="sticky">
+        <a href="#" class="logo">ECO<span>Travel</span></a>
+
+        <ul class="navbar">
+            <li><a href="#" class="active">Home</a></li>
+            <li><a href="#">About us</a></li>
+            <li><a href="#">How it works</a></li>
+        </ul>
+
+        <div class="icon">
+            <a href=""><i class="ri-instagram-line"></i></a>
+            <div class="bx bx-menu" id="menu-icon"></div>
+        </div>
+
+    </header>
+
+    <!--Home section style.css-->
+    <section class="home">
+        <div class="home-text">
+            <h5>Let's</h5>
+            <h1>Protect our planet <br></h1>
+            <p>"Embark on a journey of sustainability with EcoTravel, your trusted companion for making planet-friendly travel decisions. Seamlessly integrating technology and environmental consciousness, our advanced algorithm analyzes your travel distance, transportation preferences, and ecological impact, crafting well-informed recommendations that resonate with your values. Discover a new way to explore the world while reducing your carbon footprint - join us and navigate a future of responsible travel."</p>
+        </div>
+    </section>
+
+    <!--Custom header for h3-->
+    <section class="feature">
+        <div class>
+        </div>
+    </section>
+
 </body>
 </html>
