--- a/index.html
+++ b/index.html
@@ -21,20 +21,14 @@
 
 </head>
 <body>
-    <section id="banner">
-        <div class="banner-text">
-        <a href="#" class="name">ECO<span>Travel</span></a>
-        <p>Let's make our planet healthier for the next generation.</p>
-    </div>
-    </section>
 
     <header class="sticky">
         <a href="#" class="logo">ECO<span>Travel</span></a>
 
         <ul class="navbar">
-            <li><a href="#" class="active">Home</a></li>
-            <li><a href="#">About us</a></li>
-            <li><a href="#">How it works</a></li>
+            <li><a href="#Home" class="active">Home</a></li>
+            <li><a href="#How it works">How it works</a></li>
+            <li><a href="#About us">About us</a></li>
         </ul>
 
         <div class="icon">
@@ -45,7 +39,16 @@
     </header>
 
     <!--Home section style.css-->
-    <section class="home">
+
+    <section id="banner">
+        <div class="banner-text">
+        <a href="#" class="name">ECO<span>Travel</span></a>
+        <p>Let's make our planet healthier for the next generation.</p>
+    </div>
+    </section>
+
+
+    <section class="home" id="home">
         <div class="home-text">
             <h5>Let's</h5>
             <h1>Protect our planet <br></h1>
@@ -53,9 +56,12 @@
         </div>
     </section>
 
-    <!--Custom header for h3-->
-    <section class="feature">
-        <div class>
+
+    <!--About us section-->
+    <section class="About us" id="About us">
+        <div class="about-text">
+            <h5>ABOUT US</h5>
+            <p>WILL - GARLENS PIERRE <br> Web Designer</p>
         </div>
     </section>
 
