--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <a href="#" class="logo">ECO<span>Travel</span></a>
 
         <ul class="navbar">
-            <li><a href="#Home" class="active">Home</a></li>
+            <li><a href="#home" class="active">Home</a></li>
             <li><a href="#How it works">How it works</a></li>
             <li><a href="#About us">About us</a></li>
         </ul>
@@ -42,7 +42,7 @@
 
     <section id="banner">
         <div class="banner-text">
-        <a href="#" class="name">ECO<span>Travel</span></a>
+        <a href="#home" class="name">ECO<span>Travel</span></a>
         <p>Let's make our planet healthier for the next generation.</p>
     </div>
     </section>
@@ -61,7 +61,37 @@
     <section class="About us" id="About us">
         <div class="about-text">
             <h5>ABOUT US</h5>
-            <p>WILL - GARLENS PIERRE <br> Web Designer</p>
+        </div>
+
+        <div class="role-item">
+            <div class="role-box">
+                <i class="ri-computer-line"></i>
+                <h3>Front-End Developer: Web Designer / Developper</h3>
+                <p>WILL - GARLENS PIERRE</p>
+                <a href="https://github.com/Tohru-art" target="https://github.com/Tohru-art" class="s-btnn">GITHUB</a>
+            </div>
+
+            <div class="role-box">
+                <i class="ri-code-box-line"></i>
+                <h3>Back-End Developer: Responsible for the API / Web Developper</h3>
+                <p>Matthew DeLaCruz</p>
+                <a href="" class="s-btnn">GITHUB</a>
+            </div>
+
+            <div class="role-box">
+                <i class="ri-pencil-ruler-line"></i>
+                <h3> Wireframe Designer </h3>
+                <p>Andrew henry</p>
+                <a href="" class="s-btnn">GITHUB</a>
+            </div>
+
+            <div class="role-box">
+                <i class="ri-slideshow-line"></i>
+                <h3> Content creator </h3>
+                <p>Carlos Giron</p>
+                <a href="" class="s-btnn">GITHUB</a>
+            </div>
+
         </div>
     </section>
 
