--- a/index.html
+++ b/index.html
@@ -66,14 +66,14 @@
         <div class="role-item">
             <div class="role-box">
                 <i class="ri-computer-line"></i>
-                <h3>Front-End Developer: Web Designer / Developper</h3>
+                <h3>Front-End Developer: Web Designer / Developer</h3>
                 <p>WILL - GARLENS PIERRE</p>
                 <a href="https://github.com/Tohru-art" target="https://github.com/Tohru-art" class="s-btnn">GITHUB</a>
             </div>
 
             <div class="role-box">
                 <i class="ri-code-box-line"></i>
-                <h3>Back-End Developer: Responsible for the API / Web Developper</h3>
+                <h3>Back-End Developer: Responsible for the API / Web Developer</h3>
                 <p>Matthew DeLaCruz</p>
                 <a href="" class="s-btnn">GITHUB</a>
             </div>
