--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
 <body>
 
     <header class="sticky">
-        <a href="#" class="logo">ECO<span>Travel</span></a>
+        <a href="index.html" class="logo">ECO<span>Travel</span></a>
 
         <ul class="navbar">
             <li><a href="#home" class="active">Home</a></li>
             <li><a href="#How it works">How it works</a></li>
             <li><a href="#About us">About us</a></li>
+            <li><a href="maps/maps.html">Maps</a></li>
         </ul>
 
         <div class="icon">
