--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <i class="ri-code-box-line"></i>
                 <h3>Back-End Developer: Responsible for the API / Web Developer</h3>
                 <p>Matthew DeLaCruz</p>
-                <a href="" class="s-btnn">GITHUB</a>
+                <a href="https://github.com/MatthewASC23" target="_blank" class="s-btnn">GITHUB</a>
             </div>
 
             <div class="role-box">
