--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <ul class="navbar">
             <li><a href="#home" class="active">Home</a></li>
-            <li><a href="#How it works">How it works</a></li>
+            <li><a href="#How it works">Our Mission</a></li>
             <li><a href="#About us">About us</a></li>
             <li><a href="maps/maps.html">Maps</a></li>
         </ul>
