--- a/maps/maps.html
+++ b/maps/maps.html
@@ -26,8 +26,8 @@
 
         <ul class="navbar">
             <li><a href="../index.html">Home</a></li>
-            <li><a href="#How it works">How it works</a></li>
-            <li><a href="#About us">About us</a></li>
+            <li><a href="../#How it works">Our Mission</a></li>
+            <li><a href="../#About us">About us</a></li>
             <li><a href="maps.html" class="active">Maps</a></li>
         </ul>
 
@@ -40,10 +40,22 @@
     <section class="home" id="home">
         <div class="home-text">
             <h5>Start Location</h5>
+           
             <form class="search">
                 <label for="start"></label>
-                <label type="text"></label>
+
+                <input type="text" placeholder="Type here"> 
             </form>
+
+            <h5>Destination</h5>
+
+            <form class="search">
+                <label for="start"></label>
+
+                <input type="text" placeholder="Type here"> 
+            </form>
+            <br><br>
+            <button id="gen_btn">Press</button>
         </div>
     </section>
 
