--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
 <body>
 
     <header class="sticky">
-        <a href="#" class="logo">ECO<span>Travel</span></a>
+        <a href="index.html" class="logo">ECO<span>Travel</span></a>
 
         <ul class="navbar">
             <li><a href="#home" class="active">Home</a></li>
-            <li><a href="#How it works">How it works</a></li>
+            <li><a href="#How it works">Our Mission</a></li>
             <li><a href="#About us">About us</a></li>
+            <li><a href="maps/maps.html">Maps</a></li>
         </ul>
 
         <div class="icon">
@@ -73,23 +74,25 @@
 
             <div class="role-box">
                 <i class="ri-code-box-line"></i>
-                <h3>Back-End Developer: Responsible for the API / Web Developer</h3>
+                <h3>Back-End Developer: 
+                    Managing for the API / Web Developer</h3>
                 <p>Matthew DeLaCruz</p>
-                <a href="" class="s-btnn">GITHUB</a>
+                <a href="https://github.com/MatthewASC23" target="_blank" class="s-btnn">GITHUB</a>
             </div>
 
             <div class="role-box">
                 <i class="ri-pencil-ruler-line"></i>
-                <h3> Wireframe Designer </h3>
+                <h3> Wireframe Designer / QA Engineer</h3>
                 <p>Andrew henry</p>
-                <a href="" class="s-btnn">GITHUB</a>
+                <a href="https://github.com/noobly1004" target="_blank" class="s-btnn">GITHUB</a>
             </div>
 
             <div class="role-box">
                 <i class="ri-slideshow-line"></i>
-                <h3> Content creator </h3>
+                <h3> Content Editor / 
+                    Responsible for ensuring the website writing is high-quality and engaging.</h3>
                 <p>Carlos Giron</p>
-                <a href="" class="s-btnn">GITHUB</a>
+                <a href="https://github.com/CarlitosBuiss20K" target="_blank" class="s-btnn">GITHUB</a>
             </div>
 
         </div>
