--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>EcoTravel</title>
 
     <script src="script.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
 
@@ -27,7 +27,7 @@
 
         <ul class="navbar">
             <li><a href="#home" class="active">Home</a></li>
-            <li><a href="#How it works">Our Mission</a></li>
+            <li><a href="mission/mission.html">Our Mission</a></li>
             <li><a href="#About us">About us</a></li>
             <li><a href="maps/maps.html">Maps</a></li>
         </ul>
@@ -92,6 +92,7 @@
                 <p>Carlos Giron</p>
                 <a href="" class="s-btnn">GITHUB</a>
             </div>
+
 
         </div>
     </section>
