--- a/index.html
+++ b/index.html
@@ -43,9 +43,10 @@
 
     <section id="banner">
         <div class="banner-text">
-        <a href="#home" class="name">ECO<span>Travel</span></a>
-        <p>Let's make our planet healthier for the next generation.</p>
-    </div>
+            <a href="#home" class="name">ECO<span>Travel</span></a>
+            <!-- <img id = logo src="images/logo.png.png"> -->
+            <p>Let's make our planet healthier for the next generation.</p>
+        </div>
     </section>
 
 
