--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>EcoTravel</title>
 
     <script src="script.js" defer></script>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style.css">
 
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
 
